# coagent01-graph

./: .langchain.db  ARCHITECTURE_SIMPLIFICATION.md  CONVERSATIONAL_FLOW_DOCUMENTATION.md  README.md  cursor.md  langgraph.json  llm_cache.db  pyproject.toml  synthetic_data_report_20250712_023431.json  synthetic_data_report_20250712_023518.json  test_tce_analysis.json  workflow_analysis.json
.deepeval/: .deepeval_telemetry.txt
docs/: Arquitetura_Responsabilidades.md  DICT_ANTIPATTERN_FIXES.md  DOC_BUILD_INSTRUCTIONS.md  MULTI_AGENT_INSTRUCTIONS.md  WORKFLOW_ANALYSIS.md  fincoder-multi-agent.md  fincoder-prompt.md  jira_tickets.md  jira_tickets_tce.md
docs/prompts/: chunk_prompt.md  flow_engineering.md  handoff_engineering.md  prompt_engineering.md  state_engineering.md  tooling_engineering.md
docs/questions/: questions.json
docs/tce_swarm/: ARCHITECTURE_COMPLETE.md  STATE_ENGINEERING.md  chunk_strategy.md
docs/tce_swarm/old/: PLANO_DE_IMPLEMENTACAO.md  PROMPT_ENGINEERING.md  README.md
materials/: 01_docling_integration.ipynb  02_Agentic_RAG_.ipynb  03_chonkie_comparison_table.md  03_chonkie_text_chunking.ipynb  prompt.md
sample_agent/: README_notebook.md  agent2.py  agent3.py  agent5 copy.py  agent5.py  agent6.py  multi_agent_system_demo.ipynb  utils.py
sample_agent/agents/swarm/: __init__.py  alice_agent.py  bob_agent.py  builder.py  example.py  (+3 more)
sample_agent/analysis/: README.md  __init__.py  usage_examples.py  workflow_analyzer.py
sample_agent/app/: agent.py  agent4.py  agent5.py  agent6.py  basic.py  configuration.py  cursor.md  demo.py  multi_agent_swarm_demo.py
sample_agent/evaluations/: README_synthetic_data.md  __init__.py  example.env  run_evaluation_pipeline.py  run_synthetic_data_generator.py  setup_synthetic_data.py  synthetic_data_generator.py
sample_agent/prompts/: base_agent_prompt.jinja2  management.py  plan_executor_agent.md  planning_agent.md  question_agent.md
src/: utils.py
src/agents/: builder.py  graph.py  main_agent.py  models.py  search_agent.py  states.py  tools.py
src/analysis/: __init__.py  usage_examples.py  workflow_analyzer.py
src/auth/: authenticator.py
src/evaluations/: README.md  README_synthetic_data.md  run_evaluation_pipeline.py  run_synthetic_data_generator.py  setup_synthetic_data.py
src/prompts/: base_agent_prompt.jinja2
(+116 files in other folders)
