[project]
name = "sample_agent"
version = "0.1.0"
description = "Starter"

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.5",
    "langgraph-supervisor<0.0.27",
    "fastapi>=0.115.14",
    "langchain-openai>=0.3.27",
    "langgraph-cli[inmem]>=0.3.3",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
]

[project.scripts]
demo = "sample_agent.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
