[project]
name = "sample_agent"
version = "0.1.0"
description = "Starter"

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.5",
    "langgraph-supervisor<0.0.27",
    "fastapi>=0.115.14",
    "langchain-openai>=0.3.27",
    "langgraph-cli[inmem]>=0.3.3",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "copilotkit>=0.1.52",
    "langchain-community>=0.3.27",
    "langgraph-swarm>=0.0.12",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "deepeval>=3.2.5",
    "agentevals>=0.0.8",
]

[project.scripts]
demo = "sample_agent.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.56"
langchain = "^0.3.12"
langchain-openai = "^0.3.3"
langchain-core = "^0.3.21"
langchain-community = "^0.3.12"
langsmith = "^0.2.4"
pydantic = "^2.10.4"
asyncio = "^3.4.3"
# Evaluation frameworks - latest versions
deepeval = "^3.2.6"
openevals = "^0.1.0"
# Additional evaluation dependencies
agentevals = {git = "https://github.com/AI-Evaluation/agentevals.git", rev = "main"}
# Data processing
pandas = "^2.0.0"
numpy = "^1.24.0"
# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
# Other utilities
jinja2 = "^3.1.0"
uuid = "^1.30"
datetime = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
pre-commit = "^3.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.2.0"
mkdocs-mermaid2-plugin = "^1.1.0"
